<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        tools:context="com.tomgehrke.thisisgeekdays.MainActivity">

        <ImageView
            android:id="@+id/masthead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            android:src="@drawable/geekdaysmasthead" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/masthead"
            android:layout_margin="16dp"
            android:text="@string/show_description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_host_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/description"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_host_legend"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_host"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_staff_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/show_host"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_staff_legend"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_host_legend"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_staff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_hq_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/show_staff"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_hq_legend"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_hq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_staff"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:autoLink="map"
            android:text="@string/show_hq"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_link_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/show_hq"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/show_link_legend"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_hq"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/show_link"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>
